fix(navigation-bar): disable drag link style

--- a/src/app/home/navigation-bar/navigation-bar.component.scss
+++ b/src/app/home/navigation-bar/navigation-bar.component.scss
@@ -56,6 +56,8 @@
     display: flex;
     justify-content: center;
 
+    -webkit-user-drag: none;
+
     &--selected {
       .navigation-bar__button-selector {
         transform: translate(0, -50%);
