feat(category-details): update width of groups title

--- a/src/app/category-details/category-details.component.scss
+++ b/src/app/category-details/category-details.component.scss
@@ -143,10 +143,11 @@
     box-sizing: border-box;
     display: flex;
     align-items: center;
+    width: 100%;
     gap: 2px;
     padding: 12px 8px 12px 12px;
     height: 38px;
-    
+
     border-radius: 12px;
     cursor: pointer;
 
