feat(navigation-bar): add delay for tooltip

--- a/src/app/home/navigation-bar/navigation-bar.component.html
+++ b/src/app/home/navigation-bar/navigation-bar.component.html
@@ -11,7 +11,8 @@
         <div class="navigation-bar__button-selector"></div>
           <app-button button-transparent
                       [matTooltip]="button.tooltipText | translate"
-                      matTooltipPosition="right">
+                      matTooltipPosition="right"
+                      matTooltipShowDelay="500">
             <mat-icon class="navigation-bar__button-icon" [svgIcon]="button.icon"></mat-icon>
           </app-button>
         </a>
