--- a/src/app/shared/currency/currency.component.scss
+++ b/src/app/shared/currency/currency.component.scss
@@ -4,9 +4,15 @@
 }
 
 .currency {
-  height: 16px;
-  font-size: 16px;
-  width: 16px;
+  height: 14px;
+  width: 14px;
+  padding: 2px;
+  margin-left: 6px;
+
+  border-radius: 6px;
+  background: #4b4848;
+  color: white;
+  font-size: 14px;
   font-variation-settings: 'wght' 900;
 
   &--small {
