--- a/src/app/category-details/category-details.component.scss
+++ b/src/app/category-details/category-details.component.scss
@@ -69,7 +69,7 @@
     }
 
     &--expand {
-      margin: 18px 0;
+      margin: 24px 0;
       border-radius: 12px !important;
 
       &:first-of-type {
@@ -144,9 +144,10 @@
     display: flex;
     align-items: center;
     width: 100%;
-    gap: 2px;
     padding: 12px 8px 12px 12px;
     height: 38px;
+
+    color: #313131;
 
     border-radius: 12px;
     cursor: pointer;
@@ -161,10 +162,17 @@
     }
   }
 
+  &__table-icon {
+    height: 20px;
+    width: 20px;
+    margin-right: 6px;
+  }
+
   &__table-title-text {
     font-size: 14px;
     line-height: 1;
     font-weight: bold;
+    margin-right: 2px;
   }
 
   &__table-title-icon {
