--- a/src/app/shared/components/release-notes/release-notes.component.html
+++ b/src/app/shared/components/release-notes/release-notes.component.html
@@ -7,7 +7,20 @@
       <div class="container">
         <h3 class="release-notes__first-title">{{releaseNotes[appLanguage].app}}</h3>
         <ul class="release-notes__list">
+          <li class="release-notes__text">{{releaseNotes[appLanguage].progress['2']}}</li>
+        </ul>
+        <h3>{{releaseNotes[appLanguage].settings}}</h3>
+        <ul class="release-notes__list">
           <li class="release-notes__text">{{releaseNotes[appLanguage].progress['0']}}</li>
+        </ul>
+        <h3>{{releaseNotes[appLanguage].records}}</h3>
+        <ul class="release-notes__list">
+          <li class="release-notes__text">{{releaseNotes[appLanguage].progress['1']}}</li>
+        </ul>
+        <h3>{{releaseNotes[appLanguage].groupDetails}}</h3>
+        <ul class="release-notes__list">
+          <li class="release-notes__text">{{releaseNotes[appLanguage].progress['3']}}</li>
+          <li class="release-notes__text">{{releaseNotes[appLanguage].progress['4']}}</li>
         </ul>
       </div>
     </main>
