--- a/src/app/category-details/category-details.component.scss
+++ b/src/app/category-details/category-details.component.scss
@@ -69,7 +69,7 @@
     }
 
     &--expand {
-      margin: 18px 0;
+      margin: 24px 0;
       border-radius: 12px !important;
 
       &:first-of-type {
@@ -101,7 +101,7 @@
   }
 
   &__table-header {
-    padding: 8px 8px 8px 24px;
+    padding: 8px;
     border-radius: 12px 12px 0 0;
     display: flex;
     align-items: center;
@@ -140,8 +140,50 @@
   }
 
   &__table-title {
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 12px 8px 12px 12px;
+    height: 38px;
+
+    color: #313131;
+
+    border-radius: 12px;
+    cursor: pointer;
+
+    &:hover {
+      background: rgba(0,0,0,0.05);
+
+      .category-details__table-title-icon {
+        opacity: 1;
+        transform: translateX(2px);
+      }
+    }
+  }
+
+  &__table-icon {
+    height: 20px;
+    width: 20px;
+    margin-right: 6px;
+  }
+
+  &__table-title-text {
     font-size: 14px;
+    line-height: 1;
     font-weight: bold;
+    margin-right: 2px;
+  }
+
+  &__table-title-icon {
+    width: 20px;
+    height: 20px;
+    
+    font-size: 20px;
+    opacity: 0;
+    transform: translateX(0);
+    transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1),
+                transform 225ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   &__tables-title {
